--- a/test/main.tex
+++ b/test/main.tex
@@ -47,10 +47,13 @@
 
 % global shorthands
 \newcommand{\mat}[1]{\begin{pmatrix}#1\end{pmatrix}}
+\newcommand{\pmat}[1]{\begin{matrix}#1\end{matrix}}
 \let\TMPepsilon\epsilon\def\epsilon{\varepsilon}
 \newcommand{\build}{\ding{115}\ }
 \let\div\relax
+\let\curl\relax
 \DeclareMathOperator{\div}{div}
+\DeclareMathOperator{\curl}{curl}
 
 % multivariable calculus!
 \renewcommand{\d}{\,\mathrm{d}}
@@ -125,17 +128,17 @@
 	$k$-level set of $f(x,y)$ is the set $\{(x,y)\in\R^2:f(x,y)=k\}$
 
 	\section{Multivariable Limits}
-	%% set lim #1#2#3#4{\TMPlim_{(#1,#2)\to(#3,#4)}}
-	Let $f:\R^2\to\R$. $\lim xyab f(x,y)=L$ if for any
+	%% set Lim #1#2#3#4{\lim_{(#1,#2)\to(#3,#4)}}
+	Let $f:\R^2\to\R$. $\Lim xyab f(x,y)=L$ if for any
 	$\epsilon>0$, $\exists\;\delta > 0$ such that \\\\
 	$0<\norm{\mat{x\\y}-\mat{a\\b}}<\delta \implies |f(x,y)-L|<\epsilon$
 	\subsection{Showing that limits do not exist}
 	Pick functions that converge to the same limits for each variable,
 	and show that the limit reached changes depending on the function
 	chosen.
-	$$\lim xy00 \frac{xy}{x^2+y^2};\ \text{send }x\to y\
+	$$\Lim xy00 \frac{xy}{x^2+y^2};\ \text{send }x\to y\
 		(f(x,y)\to\tfrac1 2);\ \text{send }x\to2y\ (f(x,y)\to\tfrac2 3)$$
-	%% unset lim
+	%% unset Lim
 
 	\subsection{Showing that limits exist}
 	\paragraph{Squeeze theorem} If $(g(x)\leq f(x)\leq h(x)\ \forall x)
@@ -143,12 +146,12 @@
 	be $x\to\infty,\ x\to 1$, etc.)
 
 	\section{Continuity}
-	%% set lim #1#2#3#4{\TMPlim_{(#1,#2)\to(#3,#4)}}
-	Let $f:\R^2\to\R$. $f$ is continuous at $(a,b)$ if $\lim xyabf(x,y)=f(a,b)$
+	%% set Lim #1#2#3#4{\lim_{(#1,#2)\to(#3,#4)}}
+	Let $f:\R^2\to\R$. $f$ is continuous at $(a,b)$ if $\Lim xyabf(x,y)=f(a,b)$
 	\paragraph{Theorem 2.4} if $f$ and $g$ are both cont. at
 	$(a,b)$, then $h = f\circ g$ is cont. too.
 
-	%% unset lim
+	%% unset Lim
 
 	\section{Partial Derivative $\p$}
 	\paragraph{Def. 2.6} $\frac{\p f}{\p x}=f_x(x,y):=\frac{f(x+h,y)-f(x,y)}h$
@@ -159,9 +162,9 @@
 	\paragraph{Def. 2.12} $f$ is diff'able at $(a,b)$ if
 	$\exists$
 	a linear map $L:\R^2\to\R$ s.t.
-	%% set lim #1#2#3#4{\TMPlim_{(#1,#2)\to(#3,#4)}}
-	$$\lim h k 0 0 \frac{f(a+h,b+k)-f(a,b)-L(h,k)}{\sqrt{h^2+k^2}}=0$$
-	%% unset lim
+	%% set Lim #1#2#3#4{\lim_{(#1,#2)\to(#3,#4)}}
+	$$\Lim hk00 \frac{f(a+h,b+k)-f(a,b)-L(h,k)}{\sqrt{h^2+k^2}}=0$$
+	%% unset Lim
 	$L$ is the total derivative of $f$ at $(a,b)$. \\\\
 	\build as $(h,k)$ shrinks, we get closer to $(a,b)$, and
 	$f(a+h,b+k)-f(a,b)$ behaves increasingly linearly (like $L(h,k)$).
@@ -296,6 +299,16 @@
 	$$\iint_\S\F\cdot\d\S=\iiint_E\div\F\d V$$ \\
 	Flux through a surface = divergence of the solid it surrounds.
 	\section{Stokes' Theorem}
+
+	%% set i {\mathbf{i}} set j {\mathbf{j}} set k {\mathbf{k}}
+	$\curl\F:=\textstyle
+		\left(\pp Zy-\pp Yz\right)\i+
+		\left(\pp Xz-\pp Zx\right)\j+
+		\left(\pp Yx-\pp Xy\right)\k=
+		\abs{\pmat{\i&\j&\k\\ \tfrac\p{\p x}&\tfrac\p{\p y}&\tfrac\p{\p
+					z}\\X&Y&Z}}$
+  \paragraph{Stokes' Theorem}
+  $$\iint_\S\curl\F\cdot\d\S=\int_\C\F\cdot\d\r$$
 
 	%% unset F C r n
 
